--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "clean": "rm -rf ./lib ./coverage",
     "test": "jest",
     "test.watch": "jest --watch",
-    "prepublish": "npm run build"
+    "lint": "tslint --project ./tsconfig.json",
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "devDependencies": {
     "@types/jest": "^23.1.5",
     "jest": "^23.4.0",
+    "jest-localstorage-mock": "^2.2.0",
     "ts-jest": "^23.0.0",
-    "tslint": "~5.10.0",
-    "tslint-language-service": "^0.9.9",
+    "tslint": "^5.10.0",
+    "tslint-language-service": "0.9.9",
     "typescript": "~2.9.2"
   },
   "jest": {
@@ -40,12 +42,9 @@
     "testMatch": [
       "**/__tests__/*.+(ts|tsx|js)",
       "**/?(*.)+(spec|test).+(ts|tsx|js)"
+    ],
+    "setupFiles": [
+      "jest-localstorage-mock"
     ]
-  },
-  "plugins": [
-    {
-      "name": "tslint-language-service",
-      "configFile": "./tslint.json"
-    }
-  ]
+  }
 }
